--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ python:
 - '3.4'
 - '3.5'
 - '3.6'
-cache: 
+cache:
   pip: true
   directories:
     - $HOME/nltk_data
 install:
 - pip install -r pip-req.txt
 - python -c "import nltk; nltk.download('all')"
+- python -m spacy download en
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
   > ./cc-test-reporter
